# axum-template

./: Cargo.toml
src/: features.rs  lib.rs  main.rs
src/features/: hello.rs
