[package]
name = "axum_template"
version = "0.1.0"
edition = "2024"

[dependencies]
# web
axum = { version =  "0.8.1", features = ["ws", "macros"] }
axum-extra = { version ="0.10.0", features = ["cookie"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tower-livereload = "0.9.6"
listenfd = "1.0.1"
config = "0.15.8"
hypertext = { version = "0.6.2", features = ["axum"] }

# async
tokio = { version = "1.43.0", features = ["full"] }

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


# serde related stuff
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.137"

# utils
scopeguard = "1.2.0"
nutype = { version = "0.6.1", features = ["std","serde"] }
anyhow = { version ="1.0.95", features = ["backtrace"] }
thiserror = "2.0.11"
